--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "npx serve@latest dist"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
